# CMake-MSVC-Template

./: CMakeLists.txt  LICENSE  README.md  main.cpp
